tests/errors/native_fun_illegal_use_err/native_fun_illegal_use_err.c
#error native_fun_illegal_use_err.native_fun_illegal_use_err:7:3 Illegal use of __nativeFun. Hint: `__nativeFun ("funName", arg1, arg2, ...): ResultType`.
